--- a/DOUBTS/STRANGE_ASM/makefile
+++ b/DOUBTS/STRANGE_ASM/makefile
@@ -8,9 +8,9 @@ hello_risc.o: hello_risc.asm
 hello_risc.asm: hello_risc.c
 	$(CC) -S -O1 $^ -o $@
 
-.PHONY: clear
+.PHONY: clean
 
-clear: 
+clean: 
 	rm -f *.asm
 	rm -f *.o
 	rm -f *.x
