added objectdump in Makefile

--- a/DOUBTS/STRANGE_ASM/Makefile
+++ b/DOUBTS/STRANGE_ASM/Makefile
@@ -2,13 +2,15 @@ PREFIX=riscv64-elf
 AS=$(PREFIX)-as
 CC=$(PREFIX)-gcc
 
-
 hello_risc.o: hello_risc.asm
 	$(AS) $^ -o $@
 hello_risc.asm: hello_risc.c
 	$(CC) -S -O1 $^ -o $@
 
-.PHONY: clean
+.PHONY: clean run
+
+run: hello_risc.o
+	$(PREFIX)-objdump -D $^
 
 clean: 
 	rm -f *.asm
